Fix issue : text is visible #1274

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1319,15 +1319,15 @@ a {
   padding-bottom: 5px;
   margin-top: 0px !important;
   margin-bottom: 5px;
+  padding:2px;
 }
 
 /*changed part*/
 .modal-content p:hover{
-  background-color: rgb(30, 29, 29);
+  background-color:#3f3f3f66;
   color: white;
   border-radius: 24px;
   padding:2px;
-  transform: scale(1.12);
 }
 
 /* Close Button */
